--- a/src/pages/SelectCharacter.css
+++ b/src/pages/SelectCharacter.css
@@ -1,10 +1,24 @@
+.characterSlots{
+    display: flex;
+}
+
+.characterSlots > div{
+    display: flex;
+    flex-direction: column;
+}
+
 .characterCardContainer *{
     margin:0;
 }
 .characterCardContainer{
     background: rgba(20,20,20,0.5);
     border-radius: 20px;
+    margin: 10px;
     padding: 10px;
+    width: 300px;
+    height: 300px;
+    display:flex;
+    flex-direction: column;
 }
 
 .characterCardContainer > div{
@@ -13,14 +27,32 @@
     padding: 10px;
 }
 
-.characterIcon{
+.characterCardIconContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1
+}
+
+.characterIcon-button{
+    background-color: rgba(0, 0, 0, 0);
+    width:100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+}
+
+.characterIcon-addProfile{
     width:100px;
     height: 100px;
     background-color: rgba(150,150,150,0.5);
     border-radius: 50%;
 }
 
-.characterIcon > div{
+.characterIcon-addProfile > div{
     position: relative;
     background-color: white;
     border-radius: 20px;
